--- a/system/product/.env.example
+++ b/system/product/.env.example
@@ -1,3 +1,7 @@
-MONGODB_AUTH_URI=
+PORT=
+MONGODB_URL=
+RABBITMQ_URL=
+PUBLISH_QUEUE_NAME=
+CONSUME_QUEUE_NAME=
 JWT_SECRET=
-MONGODB_PRODUCT_URI=
+
