--- a/system/order/.env.example
+++ b/system/order/.env.example
@@ -1,4 +1,6 @@
-MONGODB_AUTH_URI=
+PORT=
+MONGODB_URL=
+RABBITMQ_URL=
+PUBLISH_QUEUE_NAME=
+CONSUME_QUEUE_NAME=
 JWT_SECRET=
-MONGODB_PRODUCT_URI=
-MONGODB_ORDER_URI=
