--- a/system/user/package.json
+++ b/system/user/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "api-gateway",
+  "name": "user",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "http-proxy": "^1.18.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
