--- a/k6/docker-compose.yml
+++ b/k6/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     image: influxdb:1.8
     ports:
       - 8086:8086
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8086/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     environment:
       - INFLUXDB_DB=k6
     restart: always
